--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="th">
+	<head>
+		<meta charset="UTF-8">
+		<title>HTML5</title>
+	</head>
+	<body>
+		<h1>Hello World <br>นี่คือเว็บของ จิรวัศ<br> วัน 20.9.2022 เวลา 16:49 </h1>
+	</body>
 </html>
